--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -81,6 +81,29 @@
 	 }
 }
 
+@mixin ellipsis($w:100%) {
+	display:inline-block;
+	width:$w;
+	white-space:nowrap;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	
+}
+
+@mixin multiEllipsis($w:100%,$line:3,$lh:1.2em) {
+
+	display:-webkit-box;
+	-webkit-line-clamp:$line; /* 라인수 */
+	-webkit-box-orient:vertical;
+	width:$w;
+	line-height:$lh;
+	height:calc(#{$lh} * #{$line});
+	overflow:hidden;
+	text-overflow:ellipsis;
+	text-align:left;
+	word-wrap: break-word; 
+}
+
 
 /**************** 반응형 ****************/
 
