--- a/sass/error.scss
+++ b/sass/error.scss
@@ -78,7 +78,18 @@
           }
           .board{
             border: 1px solid black;
-              
+            p{
+              border-bottom: 1px solid black;
+            }
+              .title{
+
+              }
+              .category{
+
+              }
+              .content{
+                
+              }
           }
         }
       }
