--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
 html, body, h1, h2, h3, h4, h5, h6, p, div, header, footer, section, aside, article, ul, ol, li, dl, dd, dt, fieldset {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   line-height: 1;
 }
 
@@ -36,7 +37,8 @@ address {
 
 input, select, textarea, button {
   font-size: inherit;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 input:focus, select:focus, textarea:focus {
@@ -75,19 +77,33 @@ a:link, a:visited, a:hover, a:active {
 .wrap .header-wrapper .header-wrap {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 0 1em;
 }
 
 .wrap .header-wrapper .header-wrap .logo-wrap {
   font-size: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .wrap .header-wrapper .header-wrap .logo-wrap .panel {
@@ -121,10 +137,17 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .header-wrapper .header-wrap .search-wrap .input-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   height: 32px;
   border: 1px solid black;
   padding: 0;
@@ -144,10 +167,17 @@ a:link, a:visited, a:hover, a:active {
   width: 30px;
   height: 30px;
   border-left: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .wrap .header-wrapper .header-wrap .menu-wrap .write {
@@ -155,10 +185,17 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   position: relative;
   height: 92vh;
 }
@@ -185,10 +222,17 @@ a:link, a:visited, a:hover, a:active {
 
 .wrap .center-wrapper .side-wrapper .category .category-header {
   padding-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-weight: bold;
 }
 
@@ -223,8 +267,11 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 102%;
   margin: 0 auto;
   padding: 30px 30px;
@@ -233,13 +280,13 @@ a:link, a:visited, a:hover, a:active {
 .wrap .center-wrapper .content-wrapper .content-wrap .content {
   border: 1px solid black;
   width: 23%;
-  height: 260px;
+  height: 300px;
   margin-right: 2%;
   margin-bottom: 2%;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
-  font-size: 1em;
+  font-size: 1.125em;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
@@ -269,50 +316,26 @@ a:link, a:visited, a:hover, a:active {
     width: 31%;
     height: 300px;
   }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
-    font-size: 1.125em;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
-    height: 140px;
-  }
 }
 
 @media screen and (max-width: 992px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 31%;
-    height: 340px;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
-    font-size: 1.25em;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
-    height: 160px;
+    height: 300px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 48%;
-    height: 380px;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
-    font-size: 1.375em;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
-    height: 180px;
+    height: 300px;
   }
 }
 
 @media screen and (max-width: 576px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 98%;
-    height: 420px;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
-    font-size: 1.5em;
-  }
-  .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
-    height: 200px;
+    height: 300px;
   }
 }
 
@@ -321,10 +344,17 @@ a:link, a:visited, a:hover, a:active {
   bottom: 1%;
   right: 2%;
   z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .up-arrow a i {
@@ -337,7 +367,8 @@ a:link, a:visited, a:hover, a:active {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   border: solid 1px black;
   width: 90vw;
   background-color: white;
@@ -368,17 +399,31 @@ a:link, a:visited, a:hover, a:active {
 
 .popup-wrap .write-popup form .date {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .popup-wrap .write-popup form .date fieldset {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-size: 1.5em;
   width: calc(50% - 0.5em);
   border: 1.5px solid black;
@@ -404,10 +449,17 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .popup-wrap .write-popup form .selectbox-wrap .selectbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-size: 1.5em;
 }
 
@@ -437,10 +489,17 @@ a:link, a:visited, a:hover, a:active {
   display: block;
   border-bottom: 1px solid black;
   padding: 1em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .popup-wrap .view-popup div:not(.button-wrap) span {
@@ -458,10 +517,17 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .popup-wrap .button-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .popup-wrap .button-wrap .popup_button {
