--- a/css/error2.css
+++ b/css/error2.css
@@ -73,6 +73,11 @@ a:link, a:visited, a:hover, a:active {
   max-width: 350px;
 }
 
+.wrapper .container-wrap .side-wrap::-webkit-scrollbar {
+  width: 0;
+  /*스크롤바의 너비*/
+}
+
 @media screen and (max-width: 992px) {
   .wrapper .container-wrap .side-wrap {
     left: -9999px;
@@ -123,7 +128,7 @@ a:link, a:visited, a:hover, a:active {
   left: 350px;
   top: 0;
   min-height: 100vh;
-  width: calc(100vw - 370px);
+  width: calc(100vw - 350px);
 }
 
 @media screen and (max-width: 992px) {
